# lab_db

./: .env  README.md  pyproject.toml
.devcontainer/: devcontainer.json
backend/: alembic.ini  app_password.txt  database.py  dependencies.py  email_sender.py  gsc-key.json  init_db.py  lab.db  main_backend.py  models.py  render.yaml  requirements.txt  schemas.py  super_admin.py
backend/crud/: crud_laboratory.py
backend/migrations/: env.py
backend/migrations/versions/: 36c8d561bb98_add_contact_email_to_laboratory.py  7d748ec74c5e_add_lab_links_to_all_tables.py
backend/routes/: admin.py  auth.py  doctor.py  equipment.py  google_cloud.py  laboratories.py  patients.py  routes.py  share.py  superadmin.py  technician.py  users.py
backend/services/: middleware_client.py
frontend/: components.py  main_frontend.py  requirements.txt  utils.py
frontend/.streamlit/: config.toml
